# tmanager

./: .gitignore  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml  pyproject.toml  run.sh
tmanager/: filesys.py  run.py  torrent_client.py
